# github_repo_list

./: .gitignore  README.md  index.html  main.4a78584b.js  main.4a78584b.js.map  main.9f4f3a43.js  main.9f4f3a43.js.map  package-lock.json  package.json  style.9d5fa113.css  style.9d5fa113.css.map  yew_app_bg.01ab009d.wasm  yew_app_bg.5cfc0486.wasm
.github/workflows/: cd.yaml
rust/: Cargo.toml
rust/src/: api.rs  app.rs  lib.rs  models.rs
rust/src/components/: card.rs
src/: color.scss  index.html  main.js  style.scss
