[package]
name = "yew-app"
version = "0.1.0"
authors = ["uzimaru0000 <shuji365630@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17.2"
wasm-bindgen = "0.2.67"
anyhow = "1.0.32"
serde = { version = "1.0.115", features = ["derive"] }
